--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         "phpunit/phpunit": "~4.0"
     },
     "autoload": {
-        "psr-0": {
-            "Hello": "src/"
+        "psr-4": {
+            "Osinz\\Hello\\":"src/"
         }
     }
 }
