--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "osinz/hello",
+    "minimum-stability": "dev",
     "type": "library",
     "description": "这里是描述",
     "homepage": "http://github.com/osinz",
@@ -11,12 +12,6 @@
             "homepage": "http://www.osinz.com"
         }
     ],
-    "require": {
-        "php": ">=5.3.2"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "~4.0"
-    },
     "autoload": {
         "psr-4": {
             "Osinz\\Hello\\":"src/"
