--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "osinz/hello",
+    "minimum-stability": "dev",
     "type": "library",
     "description": "这里是描述",
     "homepage": "http://github.com/osinz",
